--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             </div>
             <!-- content slider finished -->
             <div class="content_client_logo">
-                <div class="content_client_logo_first"></div>
-                <div class="content_client_logo_second"></div>
-                <div class="content_client_logo_third"></div>
-                <div class="content_client_logo_fourth"></div>
-                <div class="content_client_logo_fifth"></div>
+                <div class="content_client_logo"></div>
+                <div class="content_client_logo"></div>
+                <div class="content_client_logo"></div>
+                <div class="content_client_logo"></div>
+                <div class="content_client_logo"></div>
                 <div></div>
             </div>
             <!-- client logo finished -->
